fix: fp-546/1733, stretch JobHistoryModal button
The button should stretch to fit parent.

The `--max-width` is only necessary until button width is automatic:
https://github.com/TACC/Core-Portal/pull/662#discussion_r924918672

--- a/client/src/components/History/HistoryViews/JobHistoryModal.module.scss
+++ b/client/src/components/History/HistoryViews/JobHistoryModal.module.scss
@@ -45,8 +45,10 @@
 }
 
 .submit-button {
+  --max-width: 100%; /* (temporarily) overwrite `.c-button--...` */
+
   display: block;
-  margin: auto;
+  width: 100%;
 }
 
 .left-panel {
